tests/type-error/classes/NonClassInstance.vix
type List a = Nil

instance List Int where
